Fix crash in search plugin

BUG: 271516